# Bara

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md  deny.toml  flake.nix
crates/bara-oracle/: Cargo.toml
crates/bara-oracle/src/: lib.rs
crates/bara-oracle/src/binary_format/: input.rs  mach_o.rs  mach_o_entry_function_pipeline.rs  mach_o_entry_point_command.rs  mach_o_executable_image_conversion.rs  mach_o_executable_image_entry_function.rs  mach_o_executable_image_materialization.rs  mach_o_executable_image_plan.rs  mach_o_load_command.rs  mach_o_segment_command.rs  mod.rs  probe.rs
crates/bara-oracle/src/binary_format/input/: mach_o.rs  mach_o_chained_fixups.rs  mach_o_dylib_command.rs  mach_o_entry_point_command.rs  mach_o_executable_image_conversion.rs  mach_o_linkedit_command.rs  mach_o_load_command.rs  mach_o_section.rs  mach_o_segment_command.rs  mach_o_symbol_stub.rs  mach_o_symbol_table.rs  mod.rs  probe.rs
crates/bara-oracle/src/binary_format/output/: mach_o_executable_image_materialization.rs  mach_o_executable_image_plan.rs  mod.rs
crates/bara-oracle/src/binary_format/tests/: conversion.rs  entry_function.rs  entry_function_pipeline.rs  mod.rs  (+7 more)
crates/bara-oracle/src/compare/: mod.rs
crates/bara-oracle/src/executable_manifest/: host_helper.rs  image.rs  mod.rs
crates/bara-oracle/src/json/: mod.rs
crates/bara-oracle/src/observation/: mod.rs
crates/bara-oracle/src/report/: mod.rs
crates/bara-oracle/src/small_case/: mod.rs
crates/bara-oracle/src/testcase/: host_trap.rs  mod.rs  stack.rs
crates/bara-runtime/: Cargo.toml
crates/bara-runtime/src/: lib.rs
crates/bara-runtime/src/direct_continuation/: mod.rs  tests.rs
crates/bara-runtime/src/entry_dispatcher/: mod.rs  tests.rs
crates/bara-runtime/src/executable_memory/: mod.rs
crates/bara-runtime/src/guest_image/: image.rs  mach_o.rs  mach_o_preparation.rs  metadata.rs  mod.rs  tests.rs
crates/bara-runtime/src/host_trap/: mod.rs
crates/bara-runtime/src/launch/: mod.rs
crates/bara-runtime/src/macos_host_service/: mod.rs
crates/bara-runtime/src/runner/: mod.rs
crates/bara-runtime/src/runtime_blocker/: mod.rs
crates/bara-runtime/src/runtime_state/: mod.rs  tests.rs
crates/bara-runtime/tests/: return_42.rs
crates/btbc-cli/: Cargo.toml
crates/btbc-cli/src/: b8_debug_bundle.rs  blackbox_run.rs  executable_run.rs  function_run.rs  gui_hello_world_actual.rs  gui_hello_world_translated.rs  main.rs  native_artifact.rs  native_artifact_cli_tests.rs  x86_64_mach_o_fixture.rs
crates/btbc-cli/src/b8_debug_bundle/: attempt.rs  direct_continuation_report.rs  entry_dispatch_report.rs  guest_image.rs  helper_boundary.rs  import_boundary.rs  io.rs  loader.rs  report.rs  translation_artifact.rs  translation_source.rs
crates/btbc-cli/src/function_run/: fixture_translation_artifact.rs
(+125 files in other folders)
