[workspace]
members = [
    "crates/bara-arm64",
    "crates/bara-ir",
    "crates/bara-isa-x86",
    "crates/bara-runtime",
    "crates/btbc-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://example.invalid/bara"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
panic = "deny"
unwrap_used = "deny"
