[package]
name = "bara-oracle"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bara-ir = { path = "../bara-ir", version = "0.1.0" }
bara-isa-x86 = { path = "../bara-isa-x86", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
