[package]
name = "bara-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
libc = "0.2"

[dev-dependencies]
bara-arm64 = { path = "../bara-arm64" }
bara-ir = { path = "../bara-ir" }
bara-isa-x86 = { path = "../bara-isa-x86" }

[lints]
workspace = true
