[package]
name = "bara-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bara-arm64 = { path = "../bara-arm64", version = "0.1.0" }
bara-ir = { path = "../bara-ir", version = "0.1.0" }
libc = "0.2"

[dev-dependencies]
bara-isa-x86 = { path = "../bara-isa-x86", version = "0.1.0" }
bara-oracle = { path = "../bara-oracle", version = "0.1.0" }

[lints]
workspace = true
