[package]
name = "btbc-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bara-arm64 = { path = "../bara-arm64", version = "0.1.0" }
bara-ir = { path = "../bara-ir", version = "0.1.0" }
bara-isa-x86 = { path = "../bara-isa-x86", version = "0.1.0" }
bara-oracle = { path = "../bara-oracle", version = "0.1.0" }
bara-runtime = { path = "../bara-runtime", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.11", default-features = false }

[dev-dependencies]
bara-mach-o = { path = "../bara-mach-o", version = "0.1.0" }

[lints]
workspace = true
